# athena-mvsh

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
athena_mvsh/: __init__.py  cli.py  connection.py  converter.py  cursores.py  dbathena.py  error.py  formatador.py  utils.py
athena_mvsh/app_cli/: doc.py  sql.py  version.py
athena_mvsh/cursores/: __init__.py  cursores.py  cursorparquet.py  cursorparquetduckdb.py  cursorpython.py
docs/: index.md  referencia.md
referencia/: index.html
search/: search_index.json
tests/: test_column_partition.py  test_ddl.py  test_format.py  test_types.py
