[tool.poetry]
name = "athena-mvsh"
version = "0.0.17"
description = "Athena-mvsh é um biblioteca python, que interage com o serviço Amazon Athena"
authors = ["Marcus Holanda <mvsh777@hotmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: PL/SQL",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database :: Front-Ends"
]

[tool.poetry.urls]
"Codigo" = "https://github.com/Marcus-Holanda777/athena-mvsh"
"Documentacao" = "https://marcus-holanda777.github.io/athena-mvsh"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.136"
pyarrow = ">=16, <20"
duckdb = "^1.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.5"
mkdocstrings = "^0.28.1"
mkdocstrings-python = "^1.16.1"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.5"
