[tool.poetry]
name = "athena-mvsh"
version = "0.0.21"
description = "Athena-mvsh é um biblioteca python, que interage com o serviço Amazon Athena"
authors = ["Marcus Holanda <mvsh777@hotmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: PL/SQL",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database :: Front-Ends"
]

[tool.poetry.urls]
"Codigo" = "https://github.com/Marcus-Holanda777/athena-mvsh"
"Documentacao" = "https://marcus-holanda777.github.io/athena-mvsh"

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "^1.34.136"
pyarrow = ">=16, <20"
duckdb = "^1.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.5"
mkdocstrings = "^0.28.1"
mkdocstrings-python = "^1.16.1"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.7"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"